--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section id="upload">
         <h2>Upload Your Contract</h2>
-        <form action="https://tally.so/forms/your-form-id" method="post" target="_blank">
+        <form action="https://tally.so/r/w5r5xN">
             <label for="contract">Choose a Contract to Upload:</label>
             <input type="file" id="contract" name="contract" required><br><br>
             <input type="submit" value="Analyze Contract">
